# range-search

./: CMakeLists.txt  README.md  demo.py  index.h  main.cpp  music_data.py  range_sparse_generator.py  run.py  search_bf.cc  search_kdt.cc  search_kdt.h  search_lsh.cc  search_lsh.h  search_lsh_weighted.cc  search_rtree.cc  search_rtree.h  search_vq.cc  search_vq.h  srtree_data.py  transform.py  uci.py  utils.h  utils.py  vecs_io.py
all_logs/: parse_logs.py
gt/: __init__.py  cgt.cpp  inpackage_run.py  progress_bar.h  setup.py
kdt/: kdt.cpp  kdtree.h
vq/: neq.py  opq.py  pq.py  weighted_vq.py
vq_lp/: __init__.py  inpackage_run.py  setup.py  vq_lp.cpp
